add buz operations

--- a/fh_style.css
+++ b/fh_style.css
@@ -109,7 +109,7 @@ body {
   color:#808080;
 }
 
-.pr_rpt_pernw_div{
+.pr_rpt_pernw_div .bz_rpt_exp4buz_opt_div {
   margin-left:1px;
   padding-left:1px;
 }
